[gd_scene load_steps=2 format=3 uid="uid://nameselection123"]

[ext_resource type="Script" path="res://scripts/ui/NameSelection.gd" id="1_script"]

[node name="NameSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "JAK SE JMENUJEŠ?"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Zadej své jméno..."
alignment = 1

[node name="RandomButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "NÁHODNÉ JMÉNO"

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "POTVRDIT IDENTITU"